; ModuleID = '/home/carl/AnghaBench/git/extr_dir.c_invalidate_one_directory.c'
source_filename = "/home/carl/AnghaBench/git/extr_dir.c_invalidate_one_directory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.untracked_cache = type { i32 }
%struct.untracked_cache_dir = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.untracked_cache*, %struct.untracked_cache_dir*)* @invalidate_one_directory to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @invalidate_one_directory(%struct.untracked_cache* %0, %struct.untracked_cache_dir* %1) #0 {
  %3 = alloca %struct.untracked_cache*, align 8
  %4 = alloca %struct.untracked_cache_dir*, align 8
  store %struct.untracked_cache* %0, %struct.untracked_cache** %3, align 8
  store %struct.untracked_cache_dir* %1, %struct.untracked_cache_dir** %4, align 8
  %5 = load %struct.untracked_cache*, %struct.untracked_cache** %3, align 8
  %6 = getelementptr inbounds %struct.untracked_cache, %struct.untracked_cache* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = add nsw i32 %7, 1
  store i32 %8, i32* %6, align 4
  %9 = load %struct.untracked_cache_dir*, %struct.untracked_cache_dir** %4, align 8
  %10 = getelementptr inbounds %struct.untracked_cache_dir, %struct.untracked_cache_dir* %9, i32 0, i32 1
  store i64 0, i64* %10, align 8
  %11 = load %struct.untracked_cache_dir*, %struct.untracked_cache_dir** %4, align 8
  %12 = getelementptr inbounds %struct.untracked_cache_dir, %struct.untracked_cache_dir* %11, i32 0, i32 0
  store i64 0, i64* %12, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
